add msg api
