# internal/server/router/did.go
@@ -7,6 +7,8 @@ import (
 )
 
 func loadDIDmoudles(r *gin.RouterGroup, h *handle) {
+	r.GET("/createsigmsg", h.getCreateSigMsg)
+	r.GET("/deletesigmsg", h.getDeleteSigMsg)
 	r.POST("/create", h.createDID)
 	r.GET("/info", h.getDIDInfo)
 	r.POST("/delete", h.deleteDID)
@@ -15,13 +17,35 @@ func loadDIDmoudles(r *gin.RouterGroup, h *handle) {
 
 }
 
+// @ Summary GetCreateSigMsg
+// @Description GetCreateSigMsg
+// @Tags DID
+// @Accept json
+// @Produce json
+// @Param chain query string true "The signature of the chain"
+// @Param publicKey query string true "publicKey"
+// @Success 200 {object} GetSigMsgResponse
+// @Router /did/createsigmsg [get]
+func (h *handle) getCreateSigMsg(c *gin.Context) {
+	chain := c.Query("chain")
+
+	publicKey := c.Query("publicKey")
+
+	msg, err := h.did.GetCreateSignatureMassage(chain, publicKey)
+	if err != nil {
+		h.logger.Error(err)
+		c.JSON(ErrDIDGetSignatureMessage.Code, ErrDIDGetSignatureMessage)
+		return
+	}
+	c.JSON(200, GetSigMsgResponse{Msg: msg})
+}
+
 // @ Summary CreateDID
 // @Description CreateDID
 // @Tags DID
 // @Accept json
 // @Produce json
-// @Param sig body string true "signature"
-// @Param chain body string true "chain"
+// @Param sig body string true "user signature"
 // @Success 200 {object} CreateDIDResponse
 // @Router /did/create [post]
 // @Failure 502 {object} Error
@@ -31,15 +55,12 @@ func (h *handle) createDID(c *gin.Context) {
 	c.BindJSON(&body)
 	sig, ok := body["sig"].(string)
 	if !ok {
+		h.logger.Error("sig is not string", body)
 		c.JSON(ErrSignatureNull.Code, ErrSignatureNull)
+		return
 	}
 
-	chain, ok := body["chain"].(string)
-	if !ok {
-		c.JSON(ErrChainNull.Code, ErrChainNull)
-	}
-
-	fmt.Println(chain, sig)
+	fmt.Println(sig)
 
 	c.JSON(200, CreateDIDResponse{DID: "did:memo:d687daa192ffa26373395872191e8502cc41fbfbf27dc07d3da3a35de57c2d96"})
 }
@@ -49,7 +70,7 @@ func (h *handle) createDID(c *gin.Context) {
 // @Tags DID
 // @Accept json
 // @Produce json
-// @Param did query string true "did"
+// @Param did query string true "user did"
 // @Success 200 {object} GetDIDInfoResponse
 // @Router /did/info [get]
 // @Failure 503 {object} Error
@@ -57,6 +78,7 @@ func (h *handle) getDIDInfo(c *gin.Context) {
 	did := c.Query("did")
 	if did == "" {
 		c.JSON(ErrDIDNull.Code, ErrDIDNull)
+		return
 	}
 
 	fmt.Println(did)
@@ -66,12 +88,37 @@ func (h *handle) getDIDInfo(c *gin.Context) {
 	}})
 }
 
+// @ Summary GetDeleteSigMsg
+// @Description GetDeleteSigMsg
+// @Tags DID
+// @Accept json
+// @Produce json
+// @Param did query string true "user did"
+// @Success 200 {object} GetSigMsgResponse
+// @Router /did/deletesigmsg [get]
+func (h *handle) getDeleteSigMsg(c *gin.Context) {
+	did := c.Query("did")
+	if did == "" {
+		c.JSON(ErrDIDNull.Code, ErrDIDNull)
+		return
+	}
+
+	msg, err := h.did.GetDeleteSignatureMassage(did)
+	if err != nil {
+		h.logger.Error(err)
+		c.JSON(ErrDIDGetSignatureMessage.Code, ErrDIDGetSignatureMessage)
+		return
+	}
+
+	c.JSON(200, GetSigMsgResponse{Msg: msg})
+}
+
 // @ Summary DeleteDID
 // @Description DeleteDID
 // @Tags DID
 // @Accept json
 // @Produce json
-// @Param sig body string true "signature"
+// @Param sig body string true "user signature"
 // @Param did body string true "did"
 // @Success 200 {object} DeleteDIDResponse
 // @Router /did/delete [post]
@@ -83,16 +130,21 @@ func (h *handle) deleteDID(c *gin.Context) {
 	sig, ok := body["sig"].(string)
 	if !ok {
 		c.JSON(ErrSignatureNull.Code, ErrSignatureNull)
+		return
 	}
 
 	did, ok := body["did"].(string)
 	if !ok {
 		c.JSON(ErrDIDNull.Code, ErrChainNull)
+		return
 	}
 
 	fmt.Println(did, sig)
 
-	c.JSON(200, DeleteDIDResponse{})
+	c.JSON(200, DeleteDIDResponse{
+		DID:    did,
+		Status: "deactiaved",
+	})
 }
 
 func (h *handle) addVerifyInfo(c *gin.Context) {
